// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  width: 68px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-2[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-2:required {
  box-shadow: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #696979;
}

.emotion-2::-moz-placeholder {
  color: #696979;
}

.emotion-2:-ms-input-placeholder {
  color: #696979;
}

.emotion-2::placeholder {
  color: #696979;
}

.emotion-2:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-2:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-2:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-6 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-6 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-6:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

<div>
  <div
    class="emotion-7"
  >
    <button
      class="emotion-1"
      title="Previous page"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
          />
        </svg>
      </span>
    </button>
    <div
      class="emotion-3"
    >
      <input
        class="emotion-2"
        maxlength="4"
        title="Current page"
        type="text"
        value="6"
      />
    </div>
    <span
      class="emotion-4"
    >
      of
       
      10
    </span>
    <button
      class="emotion-6"
      title="Next page"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  width: 68px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-2[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-2:required {
  box-shadow: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #696979;
}

.emotion-2::-moz-placeholder {
  color: #696979;
}

.emotion-2:-ms-input-placeholder {
  color: #696979;
}

.emotion-2::placeholder {
  color: #696979;
}

.emotion-2:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-2:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-2:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-6 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-6 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-6:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

<div>
  <div
    class="emotion-7"
  >
    <button
      class="emotion-1"
      disabled=""
      title="Previous page"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
          />
        </svg>
      </span>
    </button>
    <div
      class="emotion-3"
    >
      <input
        class="emotion-2"
        maxlength="4"
        title="Current page"
        type="text"
        value="1"
      />
    </div>
    <span
      class="emotion-4"
    >
      of
       
      10
    </span>
    <button
      class="emotion-6"
      title="Next page"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`should render correctly 3`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  width: 68px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-2[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-2[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-2:required {
  box-shadow: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #696979;
}

.emotion-2::-moz-placeholder {
  color: #696979;
}

.emotion-2:-ms-input-placeholder {
  color: #696979;
}

.emotion-2::placeholder {
  color: #696979;
}

.emotion-2:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-2:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-2:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-6 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-6 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-6:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-1 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

<div>
  <div
    class="emotion-7"
  >
    <button
      class="emotion-1"
      disabled=""
      title="Previous page"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
          />
        </svg>
      </span>
    </button>
    <div
      class="emotion-3"
    >
      <input
        class="emotion-2"
        maxlength="4"
        title="Current page"
        type="text"
        value="1"
      />
    </div>
    <span
      class="emotion-4"
    >
      of
       
      9
    </span>
    <button
      class="emotion-6"
      title="Next page"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            clip-rule="evenodd"
            d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
